# dsvcol

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  init.ps1  init.sh  main.c
include/: delimiter_optarg.h  dsv.h  getline.h  glob.h  io.h  util.h
src/: delimiter_optarg.c  dsv.c  getline.c  io.c  util.c
test/: CMakeLists.txt  delimiter_optarg.test.c  getline.test.c  ischrin.test.c
test/data/: README.md  Thirukural.csv  Thirukural_With_Explanation.csv  Vietnamese-Japanese.csv  aozora_corpus.csv  aozora_corpus_en.csv  bos2021ModC.csv  bos2021ModC.tsv  cn_zh_news_collection.csv
tests/: CMakeLists.txt  delimiter_optarg.test.c  getline.test.c  io.getline.test.c  ischrin.test.c
